# kinova_pick_place

./: README.md  kinova.rosinstall
configuration_space_distance/: CMakeLists.txt  package.xml
configuration_space_distance/src/: configuration_space_distance_node.cpp
kinova_arm_description/: CMakeLists.txt  package.xml
kinova_arm_description/urdf/: kinova_arm.xacro  kinova_arm_standalone.xacro  kinova_common.xacro  kinova_finger_set.xacro
kinova_arm_iksolver/: CMakeLists.txt  package.xml
kinova_arm_iksolver/src/: kinova_arm_iksolver_node.cpp
kinova_arm_moveit_config/: CMakeLists.txt  package.xml
kinova_arm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  kinova_arm.srdf
kinova_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  kinova_arm_demo.launch  kinova_arm_gazebo_demo.launch  kinova_arm_moveit_controller_manager.launch.xml  kinova_arm_ros_control_moveit_controller_manager.launch.xml  kinova_arm_virtual_robot_demo.launch  move_group.launch  move_group_kinova_arm.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kinova_arm_pick_and_place/: CMakeLists.txt  package.xml
kinova_arm_pick_and_place/src/: kinova_arm_pick_and_place_node.cpp
kinova_arm_reachability/: CMakeLists.txt  package.xml
kinova_arm_reachability/src/: kinova_arm_reachability_node.cpp
kinova_description/: CMakeLists.txt  package.xml
kinova_description/urdf/: kinova_arm.xacro  kinova_arm_standalone.xacro
kinova_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kinova_moveit_config/config/: controllers_ros_control.yaml  fake_controllers.yaml  j2s7s300.srdf  joint_limits.yaml  kinematics.yaml  ros_controllers.yaml
kinova_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  gazebo.launch  j2s7s300_demo.launch  j2s7s300_gazebo_demo.launch  j2s7s300_ros_control_moveit_controller_manager.launch.xml  j2s7s300_virtual_robot_demo.launch  kinova_arm_demo.launch  kinova_arm_gazebo_demo.launch  kinova_arm_moveit_controller_manager.launch.xml  kinova_arm_virtual_robot_demo.launch  move_group.launch  move_group_j2s7s300.launch  move_group_kinova_arm.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
kinova_pick_and_place/: CMakeLists.txt  package.xml
kinova_pick_and_place/src/: kinova_pick_and_place_node.cpp
pick_and_place/: CMakeLists.txt  package.xml
pick_and_place/src/: pnp.cpp
