<?xml version="1.0"?>
<package format="2">
  <name>kinova_arm_iksolver</name>
  <version>0.0.0</version>
  <description>The kinova_arm_iksolver package</description>
  <author email="preethi@artpark.in">Preethi N</author>
  <maintainer email="preethi@artpark.in">Preethi N</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>moveit_ros_planning_interface</build_depend>

  <exec_depend>moveit_ros_planning_interface</exec_depend>


</package>
