<?xml version="1.0"?>
<package format="2">
  <name>kinova_description</name>
  <version>0.0.1</version>
  <description>
      3D model of various Kinova robotic arms.
      Includes the model and URDF files for working with an arm in RViz or Gazebo.
  </description>
  <maintainer email="ros@kinovarobotics.com">Kinova ROS Support</maintainer>
  <maintainer email="preethi@artpark.in">Preethi N</maintainer>

  <author>Kinova ROS Support</author>
  <author>Preethi N</author>

  <license>BSD</license>
  <url>http://ros.org/wiki/kinova_description</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>


