<?xml version="1.0"?>
<package format="2">
  <name>kinova_pick_and_place</name>
  <version>0.0.0</version>
  <description>The kinova_pick_and_place package</description>
  <maintainer email="preethi@artpark.in">artparkintern</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

 
  <build_depend>moveit_ros_planning_interface</build_depend>

  <exec_depend>moveit_ros_planning_interface</exec_depend>


</package>
